# sudoku

./: CMakeLists.txt  MAKEFILE
cmake/: FindSDL2_ttf.cmake
documents/: И594_ИвановаАА_ПояснительнаяЗаписка.docx
schemes/: hard.txt  low.txt
src/: Background.cpp  Background.h  Control.cpp  Control.h  Game.cpp  Game.h  GlobalVariables.cpp  GlobalVariables.h  Level.cpp  Level.h  Menu.h  Rules.cpp  Rules.h  Sudoku.cpp  Sudoku.h  Texture.h  Victory.cpp  Victory.h  main.cpp
